tests/NormalTests/paczka1/small_fuzzy/60035988.err
Error in line 6: UDM S50 26,4
Error in line 8: UDM A845 33,8
Error in line 10: UDM S279 83,0
Error in line 12: UDM A845 63,7
